--- a/TP HTML/styles/style.css
+++ b/TP HTML/styles/style.css
@@ -4,9 +4,8 @@
 @import "hero.css";
 @import "features.css";
 @import "footer.css";
-
-
-
-
+@import "carta.css";
+@import "contact.css";
+@import "reserva.css";
 
 
