--- a/TP HTML/styles/hero.css
+++ b/TP HTML/styles/hero.css
@@ -84,19 +84,21 @@
 }
 .left-floating {
     width: 120px;
+    display: flex;
     position: absolute;
     bottom: 0;
-    left: 0;
-    z-index: -1;
+    left: 30;
+    z-index: 0;
     transform: rotate(15deg) translate(-20%, 10%);
 }
 
 .right-floating {
     width: 120px;
+    display: flex;
     position: absolute;
     bottom: 0;
     right: 0;
-    z-index: -1;
+    z-index: 0;
     transform: rotate(-15deg) translate(30%, 5%);
 
 }
